# gz_ray_label_plugin

./: CMakeLists.txt  README.md  package.xml  test.launch  test.world
msg/: LabelPoint.msg  LabelPoints.msg
src/: gz_ray_label_plugin.cc
